--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title>Organizador de Shows</title>
 
 <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
-
+<link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
@@ -56,8 +57,9 @@
 <p>Total necesario: $<span id="total">0.00</span></p>
 </section>
 
+<script src="firebase-config.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
-
+<script src="scripts.js"></script>
 
 
 </body>
